<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/bnRoomies"
        android:enabled="true"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/menu_buscarroomie"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bnChat"
        android:enabled="true"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/menu_chats_conexiones"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bnOfrecer"
        android:enabled="true"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/menu_ofrecerhabitacion"
        app:showAsAction="ifRoom" />

</menu>