<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_login_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <!-- <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center_horizontal"
         android:visibility="invisible" />-->

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/boton_blanco_fb"
        android:elevation="4dp"
        android:text="@string/login_bt_face_hint"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />


    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/btLoginFacebook"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo_app_just" />

    <TextView
        android:id="@+id/tvAccountAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btLoginFacebook"
        android:layout_centerHorizontal="true"
        android:text="@string/login_account_already"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAccountAlready"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btIniciarSesion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/boton_transparente_borde_blanco"
            android:elevation="4dp"
            android:text="@string/login_login"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btRegistrarse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/boton_transparente_borde_blanco"
            android:elevation="4dp"
            android:text="@string/login_register"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTerminosyCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/login_terminos"
        android:textColor="@android:color/white" />

</RelativeLayout>