<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.narumasolutions.just4roomies.UI.Login.LoginViewModel" />

    </data>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_degradado"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsuario"
                style="@style/EditTextTheme"
                android:layout_marginTop="24dp"
                android:drawableLeft="@drawable/baseline_mail_black_24"
                android:drawableTint="@color/colorPrimary"
                android:gravity="center"
                android:hint="@string/login_hint_usuario"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/naranja_degradado_transparente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <EditText
                android:id="@+id/etPassword"
                style="@style/EditTextTheme"
                android:background="@drawable/boton_blanco_fb"
                android:drawableLeft="@drawable/baseline_lock_black_24"
                android:drawableTint="@color/colorPrimary"
                android:gravity="center"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textColorHint="@color/naranja_degradado_transparente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_app_just" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/boton_transparente_borde_blanco"
                android:text="Iniciar Sesion"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <TextView
                android:id="@+id/tvRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/login_password_forgot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btLogin"
                tools:layout_editor_absoluteX="151dp" />

            <TextView
                android:id="@+id/tvConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/login_terminos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRecover"
                app:layout_constraintVertical_bias="0.918" />

        </android.support.constraint.ConstraintLayout>

</layout>
